Back-end update v2
Include SimpleGrantedAuthority in JwtFilter. I forgor.